--- a/estilo.css
+++ b/estilo.css
@@ -94,11 +94,11 @@ h3 {
 }
 
 #musica p, #musica h2 {
-  padding-left: 12px;
+  margin-left: 12px;
 }
 
 #musica p:nth-child(2n+1) {
-  padding-left: 46px;
+  padding-left: 34px;
 }
 
 .destacado {
@@ -109,9 +109,9 @@ h3 {
 }
 
 #musica .destacado p {
-  padding-left: 12px;
+  padding-left: 0;
 }
 
 #musica .destacado p:nth-child(2n) {
-  padding-left: 46px;
+  padding-left: 34px;
 }
